--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
         </div>    
         </div>
          
+        <div id="page-wrapper">
         <div class="container-fluid" >
-        <div class="container">
+        <div class="container" id="container">
             <div class="row">
-		   <div class="col-md-4"></div>
-           <div class="col-md-4" id="center_div">
+		   <div class="col-lg-4"></div>
+           <div class="col-lg-4" id="center_div">
 	           <h6>Do your Currency conversion below</h6>
 	        
 	           <form >
@@ -42,7 +43,7 @@
                <div class="total"><h4 id="amountResult">0.00</h4></div>
                <button type="submit" id="btnConvert">Convert</button>
            </div>
-           <div class="col-md-4"></div>
+           <div class="col-lg-4"></div>
             </div>
 
 
@@ -61,7 +62,7 @@
 </footer>
 
 </div>
-
+</div>
 <!-- <script src="/sw.js"></script> -->
 <script src="js/idb.js"></script>
 <script src="js/currencyconvertor.js"></script>
