--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	         <li id="tel"  class="fa fa-phone" aria-hidden="true"><a href="tel:0549525762">&nbsp; 0549525762 &nbsp; |</a></li>
 	         <li id="email"  class="fa fa-envelope" aria-hidden="true"><a href="mailto:agbemadud@gmail.com">&nbsp; agbemadud@gmail.com  &nbsp; |</a></li>
 	         </ul>
-	      <p id="pf"><a href="#top" > Currency Convertor</a> &nbsp; &copy 2018
+	      <p id="pf"><a href="#top" > ALCwithGoogle3.0</a> &nbsp; &copy 2018
 
         </div>
 </footer>
